--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     image: postgres:15  # Указана версия
     environment:
       POSTGRES_USER: KLOUD
-      POSTGRES_PASSWORD: Homelike34
+      POSTGRES_PASSWORD: ***********
       POSTGRES_DB: mydb
       PGDATA: /var/lib/postgresql/data/pgdata
     container_name: db
